🐎 ci: 修改 redis.conf 最大内存占用(仅用于开发测试)

--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -1116,7 +1116,7 @@ requirepass 123
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 100mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1145,7 +1145,7 @@ requirepass 123
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy allkeys-lfu
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -2217,7 +2217,7 @@ rdb-save-incremental-fsync yes
 # a good idea to leave the defaults untouched.
 
 # Active defragmentation is disabled by default
-# activedefrag no
+activedefrag yes
 
 # Minimum amount of fragmentation waste to start active defrag
 # active-defrag-ignore-bytes 100mb
