--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 go.sum
 .vscode
-docker/mysql
+docker/mysql/data
 docker/redis/log
 docker/redis/data/appendonlydir/appendonly.aof
 docker/redis/data/dump.rdb
